fixed the spacing issues, resolves #5

--- a/css/sobeytown.css
+++ b/css/sobeytown.css
@@ -190,4 +190,11 @@ p { font-family: 'Nixie One', cursive; }
     table-layout: fixed;
 }
 
+.col-md-4, .col-md-8 {
+    float:none;
+    display:inline-block;
+    vertical-align:middle;
+    margin-right:-4px;
+}
+
 
